Merge pull request #560 from OpenVADL/feature/hw-decoder
Integrate VDT into the RTL synthesis